# image_processor

./: CMakeLists.txt  README.md  apply_filters.cpp  apply_filters.h  base_filter.h  crop.cpp  crop.h  crystallize.cpp  crystallize.h  edge_detection.cpp  edge_detection.h  exception.cpp  exception.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  image.cpp  image.h  image_processor.cpp  negative.cpp  negative.h  parse.cpp  parse.h  sharpening.cpp  sharpening.h  unit_tests.cpp
